04/01/2003 Bob Rossi <bob_rossi@cox.net>

    * cgdb now works on windows XP in cygwin: Fixed creation of home directory.
    * Try to make configure fail if readline is not installed on system.

03/29/2003 Bob Rossi <bob_rossi@cox.net>

    * Fixed all of cgdb's to work with autoconf: All of the files that make up
    cgdb now test to see if a header is available before it is included.

03/27/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed cgdb to version 0.3.0 in cvs.

03/26/2003 Bob Rossi <bob_rossi@cox.net>

    * Fixed resizing with new input library: cgdb now writes to a pipe in the
    signal handler that gets triggered in the select loop which does the
    resize. It used to do ungetch.
    * Fixed return values of _input functions in cgdb.c: These functions would
    quit on there own. They have no right to do so, they should report an
    error and have cgdb quit in some common location
    * Changed configure from --with-driver to --with-drivers: The reason for
    this is because now there are several driver programs that can be used to
    test cgdb.
    * Removed cgdb's handling of esc code sequences: cgdb was looking for esc
    sequences. It was looking for Shift-Arrow keys and Home and End. This has
    been replaced with new input library.

03/25/2003 Bob Rossi <bob_rossi@cox.net>

    * Integrated new input unit into cgdb: cgdb no longer uses getch to get
    input from the terminal. This is useful because now cgdb can know the high
    level characters ( CGDB_KEY_UP ) and it can also know the esc seq
    associated with them. So it can send them to readline.

03/23/2003 Bob Rossi <bob_rossi@cox.net>

    * Fixed interface to tgdb to allow the new readline support: This fixes
    the bug where alt-D did not work, and the ^r ( reverse search ) bug would
    cause cgdb to block. It also fixes the existing bug in cgdb, it did not
    print the output of tgdb_send.

03/06/2003 Mike Mueller <mmueller@cs.uri.edu>
